# Short-Trend-Rader

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  setup.bat  setup.sh  trend-radar-masterplan.md
.github/workflows/: ci.yml
docs/: getting-started-en.md  getting-started-ko.md  release-notes-v0.2.0-ko-en.md  release-notes-v0.2.1-ko-en.md  system-guide-ko-en.md
n8n/: README.md  workflow-digest.json  workflow.json
src/trend_radar/: __init__.py  __main__.py  cli.py  diagnostics.py  models.py  runner.py  scheduler.py  utils.py
src/trend_radar/collectors/: __init__.py  base.py  google_trends.py  naver.py  reddit.py  rss_generic.py  youtube.py
src/trend_radar/config/: __init__.py  defaults.py  loader.py  schema.py
src/trend_radar/outputs/: __init__.py  digest_builder.py  json_writer.py  md_writer.py
tests/: conftest.py  test_cli.py  test_collectors.py  test_config.py  test_doctor.py  test_runner.py
